[package]
name = "flint-ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10.3", features = [
    "luau",
    "serialize",
    "send",
    "async",
    "macros",
] }
serde = "1.0.219"
directories = "6.0.0"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = "0.8.3"
toml = "0.8.20"
flint-utils = { path = "../flint-utils" }
smol = "2.0.2"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "sqlx-mysql"] }
async-openai = { version = "0.28.0", features = ["byot"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread"] }
