[package]
name = "flint"
version = "0.1.0"
authors = ["Soham Karandikar <sohamk10@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "6.0.0"
ignore = "0.4.23"
mlua = { version = "0.10.3", features = ["luau", "serialize", "send", "async"] }
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
threadpool = "1.8.1"
throbber-widgets-tui = "0.8.0"
toml = "0.8.19"
tui-popup = "0.6.0"
tui-textarea = "0.7.0"
flint-macros = { path = "../flint-macros" }
thiserror = "2.0.11"
serde_yaml = "0.9.34"
clap = { version = "4.5.31", features = ["derive"] }
semver = "1.0.26"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "chrono",
    "json",
    "runtime-async-std",
] }
smol = "2.0.2"
